Update CancionController.java
Modificado para subir a firebase